Improvements made at SirisCon Change Players mananagement Remove useless representation and add game / players tables Fix winner algo

--- a/connectfour/plugins/org.obeonetwork.dsl.connectfour.edit/plugin.properties
+++ b/connectfour/plugins/org.obeonetwork.dsl.connectfour.edit/plugin.properties
@@ -40,3 +40,7 @@ _UI_Unknown_feature = Unspecified
 _UI_Color_none_literal = NONE
 _UI_Color_red_literal = RED
 _UI_Color_yellow_literal = YELLOW
+_UI_Grid_time_feature = Time
+_UI_Grid_player1_feature = Player1
+_UI_Grid_player2_feature = Player2
+_UI_Player_victories_feature = Victories
